crates/test-files/fixtures/compile_errors/return_type_undefined.fe
contract C {
    pub fn f() -> Foo {}
}
